--- a/css/styles.css
+++ b/css/styles.css
@@ -195,7 +195,18 @@ img {
 }
 
 .features-list-item {
-    flex-basis: calc((100% - 3 * 24px) / 4)
+    flex-basis: calc((100% - 3 * 24px) / 4);
+}
+
+.feature-icon{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    padding: 24px 0;
+    margin-bottom: 8px;
+    border: 1px solid #8e8f99;
+    border-radius: 4px;
+    background-color: #f4f4fd;
 }
 
 .feature-title {
