--- a/css/styles.css
+++ b/css/styles.css
@@ -246,12 +246,6 @@ img {
     box-shadow: 0 2px 1px 0 rgba(46, 47, 66, 0.08), 0 1px 1px 0 rgba(46, 47, 66, 0.16), 0 1px 6px 0 rgba(46, 47, 66, 0.08);
 }
 
-.team-member-content {
-    margin-top: auto;
-    padding: 32px 0;
-    text-align: center;
-}
-
 .team-title {
     margin-bottom: 72px;
     font-weight: 700;
@@ -261,6 +255,14 @@ img {
     text-align: center;
     color: #2e2f42;
     text-transform: capitalize;
+}
+
+.team-member-content {
+    margin-top: auto;
+    margin-left: 16px;
+    margin-right: 16px;
+    padding: 32px 0;
+    text-align: center;
 }
 
 .team-member-name {
@@ -274,12 +276,33 @@ img {
 }
 
 .team-member-position {
+    margin-bottom: 8px;
     font-weight: 400;
     font-size: 16px;
     line-height: 1.5;
     letter-spacing: 0.02em;
     text-align: center;
     color: #434455;
+}
+
+.team-member-social-list {
+    display: flex;
+    justify-content: space-between;
+}
+
+.team-member-social-link {
+    width: 40px;
+    height: 40px;
+    border-radius: 50%;
+    background-color: #4d5ae5;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.team-member-social-link:hover, .team-member-social-link:focus {
+    background-color: #404bbf;
 }
 
 .portfolio {
