--- a/css/styles.css
+++ b/css/styles.css
@@ -129,6 +129,8 @@ img {
 .hero {
     padding: 188px 0;
     background-image: linear-gradient(rgba(46, 47, 66, 0.7), rgba(46, 47, 66, 0.7)), url(../images/hero/hero-bg.jpg);
+    background-position: center;
+    background-size: cover;
     background-repeat: no-repeat;
     max-width: 1440px;
     margin: 0 auto;
