--- a/css/styles.css
+++ b/css/styles.css
@@ -205,7 +205,7 @@ img {
     display: flex;
     justify-content: center;
     align-items: center;
-    padding: 24px 0;
+    height: 112px;
     margin-bottom: 8px;
     border: 1px solid #8e8f99;
     border-radius: 4px;
