--- a/css/styles.css
+++ b/css/styles.css
@@ -290,7 +290,8 @@ img {
 
 .team-member-social-list {
     display: flex;
-    justify-content: space-between;
+    justify-content: center;
+    gap: 24px;
 }
 
 .team-member-social-link {
@@ -302,6 +303,10 @@ img {
     justify-content: center;
     align-items: center;
     transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.social-icon {
+    fill: #f4f4fd;
 }
 
 .team-member-social-link:hover, .team-member-social-link:focus {
